<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/driver_transaction_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin_bottom"
    android:layout_marginEnd="@dimen/card_margin_end"
    android:layout_marginStart="@dimen/card_margin_start"
    android:layout_marginTop="@dimen/card_margin_top"
    android:elevation="2dp"
    app:cardBackgroundColor="@color/cardview_light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:text="@string/date"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_feb_2017" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:text="@string/driver"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/driver_displayname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anton_power" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:text="@string/rating"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/driver_rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:text="@string/rated_by"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/rated_by_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yulia" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

