<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|end"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/request_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_margin_15dp">

        <TextView
            android:id="@+id/request_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:background="@drawable/rounded_edge"
            android:padding="@dimen/dialog_padding_5dp"
            android:text="@string/request_driver" />

        <ImageView
            android:layout_width="@dimen/image_width_45dp"
            android:layout_height="@dimen/image_height_45dp"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:layout_toEndOf="@+id/request_textview"
            android:src="@drawable/driver"
            android:contentDescription="@string/this_is_request_driver_image" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/driver_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_margin_15dp">

        <TextView
            android:id="@+id/driver_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:background="@drawable/rounded_edge"
            android:padding="@dimen/dialog_padding_5dp"
            android:text="@string/driver_details" />

        <ImageView
            android:layout_width="@dimen/image_width_40dp"
            android:layout_height="@dimen/image_width_40dp"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:layout_toEndOf="@+id/driver_textview"
            android:src="@drawable/about"
            android:contentDescription="@string/this_is_driver_image" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rating_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_margin_15dp">

        <TextView
            android:id="@+id/rating_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:background="@drawable/rounded_edge"
            android:padding="@dimen/dialog_padding_5dp"
            android:text="@string/rate_your_driver" />

        <ImageView
            android:layout_width="@dimen/image_width_50dp"
            android:layout_height="@dimen/image_height_50dp"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:layout_toEndOf="@+id/rating_textview"
            android:src="@drawable/rating"
            android:contentDescription="@string/this_is_rate_your_driver_image" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nearby_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_margin_15dp">

        <TextView
            android:id="@+id/nearby_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:background="@drawable/rounded_edge"
            android:padding="@dimen/dialog_padding_5dp"
            android:text="@string/nearby_places" />

        <ImageView
            android:layout_width="@dimen/image_width_50dp"
            android:layout_height="@dimen/image_height_50dp"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:layout_toEndOf="@+id/nearby_textview"
            android:src="@drawable/direction"
            android:contentDescription="@string/this_is_nearby_places_image" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logout_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_margin_15dp">

        <TextView
            android:id="@+id/logout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dialog_margin_5dp"
            android:background="@drawable/rounded_edge"
            android:padding="@dimen/dialog_padding_5dp"
            android:text="@string/log_out" />

        <ImageView
            android:layout_width="@dimen/image_width_50dp"
            android:layout_height="@dimen/image_height_50dp"
            android:layout_margin="@dimen/dialog_padding_5dp"
            android:layout_toEndOf="@+id/logout_textview"
            android:src="@drawable/logout"
            android:contentDescription="@string/this_is_log_out_image" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cross_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_margin_5dp"
        android:layout_marginEnd="@dimen/dialog_margin_12dp">

        <ImageView
            android:layout_width="@dimen/dialog_image_view_80dp"
            android:layout_height="@dimen/dialog_image_view_80dp"
            android:src="@drawable/cross_icon"
            android:contentDescription="@string/this_is_close_dialog_image" />
    </RelativeLayout>

</LinearLayout>